--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,53 +1,8 @@
-<!--<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
-<table>
-    <tfoot>
-        <td colspan="6">
-            <div class="pagination pull-right">
-                <ul>
-                    <li ng-class="{disabled: currentPage == 0}">
-                        <a href ng-click="prevPage()">« Prev</a>
-                    </li>
-                    <li ng-repeat="n in range(pagedItems.length)"
-                        ng-class="{active: n == currentPage}"
-                    ng-click="setPage()">
-                        <a href ng-bind="n + 1">1</a>
-                    </li>
-                    <li ng-class="{disabled: currentPage == pagedItems.length - 1}">
-                        <a href ng-click="nextPage()">Next »</a>
-                    </li>
-                </ul>
-            </div>
-        </td>
-    </tfoot>
-</table>-->
 <div class="row">
-    
-    <div class="col-lg-3">
+    <div class="col-lg-2">
         <div class="input-group">
           <input type="text" class="form-control" ng-model="searchValue" placeholder="Search for...">
           <span class="input-group-btn">
-            <button class="btn btn-default" type="button">Search</button>
           </span>
         </div>
     </div>
@@ -76,20 +31,36 @@
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="" ng-click="orderByType(type.cname, type.jname, type.ename)" ng-repeat="type in types">{{type.ename}}</a></li>
+            <li><a href="" ng-click="orderByType(type.cname, type.jname, type.ename)" ng-repeat="type in types | orderBy: type.ename:true">{{type.ename}}</a></li>
           </ul>
         </div>
     </div>
 </div>
-
-sortingOrder={{sortingOrder}} <br /><br />
-<div class="col-lg-3" ng-repeat="pm in pokemonData | filter:searchValue | filter: {pm: filterByTypes} | orderBy: sortingOrder: reverse">
-    <div class="panel panel-info"> 
-        <div class="panel-heading"> 
-            <h3 class="panel-title">{{pm.ename}}</h3> 
-        </div> 
-        <div class="panel-body"> 
-            <img class="pokemon-grid" ng-src="../images/img/{{pm.id + pm.ename}}.png" /> 
-        </div> 
+<br /><br />
+<div class="pokemon-list">
+    <div class="col-lg-3" ng-repeat="pm in pokemonData | filter:searchValue | filter: {etype: eOrderByType} | orderBy: sortingOrder: reverse">
+        <div class="panel panel-info"> 
+            <div class="panel-heading"> 
+                <h3 class="panel-title poke-name">{{pm.id}} {{pm.ename}}</h3> 
+            </div> 
+            <div class="panel-body"> 
+                <img class="pokemon-grid" ng-src="../images/img/{{pm.id + pm.ename}}.png"  err-src="../images/img/{{pm.id + pm.flatName}}.png" /> 
+                <div>
+                    <div class="pokemon-type">
+                        <div class="type1" ng-repeat="type in pm.etype">
+                            <span class="label label-default col-sm-12 label-fixed" ng-if="type=='Normal'">{{type}}</span>
+                            <span class="label label-success col-sm-12 label-fixed" ng-if="type=='Grass'">{{type}}</span>
+                            <span class="label label-success col-sm-12 label-fixed" ng-if="type=='Ground'">{{type}}</span>
+                            <span class="label label-danger col-sm-12 label-fixed" ng-if="type=='Fire'">{{type}}</span>
+                            <span class="label label-danger col-sm-12 label-fixed" ng-if="type=='Electric'">{{type}}</span>
+                            <span class="label label-warning col-sm-12 label-fixed" ng-if="type=='Poison'">{{type}}</span>
+                            <span class="label label-info col-sm-12 label-fixed" ng-if="type=='Insect'">{{type}}</span>
+                            <span class="label label-info col-sm-12 label-fixed" ng-if="type=='Flight'">{{type}}</span>
+                            <span class="label label-primary col-sm-12 label-fixed" ng-if="type=='Water'">{{type}}</span>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        </div>
     </div>
 </div>
