fixed order by type and tried extending the controller for detail view

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -96,3 +96,47 @@ body {
     border-color: #e5e5e5;
     color: #333;
 }
+
+.pokemon-list {
+    height: 600px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.pokemon-type {
+    float: right;
+    position: absolute;
+    margin-top: -100px;
+    margin-left: 166px;
+}
+
+.type1 {
+    width: 20px;  
+    margin-bottom: 30px;
+}
+
+.label-fixed {
+    width: 60px;
+}
+
+.poke-name {
+    text-align: center;
+}
+
+.label-dark {
+    background-color: #333;
+}
+
+.label-steel {
+    background-color: #999;
+    width: 60px;
+}
+
+.label-pink {
+    background-color: #de5bce;    
+}
+
+.pokemon-panel {
+    cursor: pointer;
+}
+
