added detail view and modified main page

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -98,9 +98,9 @@ body {
 }
 
 .pokemon-list {
-    height: 600px;
+    /*height: 600px;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: hidden;*/
 }
 
 .pokemon-type {
@@ -117,6 +117,7 @@ body {
 
 .label-fixed {
     width: 60px;
+    margin-bottom: 5px;
 }
 
 .poke-name {
@@ -136,7 +137,54 @@ body {
     background-color: #de5bce;    
 }
 
-.pokemon-panel {
+.table tr {
     cursor: pointer;
 }
 
+.label-head {
+    width: 600px;
+    margin-left: 250px;
+}
+
+.detail-pokemon-type {
+    float: right;
+    position: absolute;
+    margin-top: -145px;
+    margin-left: 260px;
+}
+
+.progress-bar-defense {
+    background-color: #5cb85c;
+}
+
+.progress-bar-speed {
+    background-color: #de5bc2;
+}
+
+.detail-pokemon-grid {
+    height: 75%;
+    width: 75%;
+    margin-left: 50px;
+}
+
+.detail-label-fixed {
+    width: 130px;
+    height: 30px;
+    padding: 0.6em .6em .3em;
+    font-size: 98%;
+    margin-right: 20px;
+    margin-left: 50px;
+    margin-top: 20px;
+    margin-bottom: 12px;
+}
+
+.detail-label-fixed-single {
+    width: 130px;
+    height: 30px;
+    padding: 0.6em .6em .3em;
+    font-size: 98%;
+    margin-right: 20px;
+    margin-left: 150px;
+    margin-top: 20px;
+    margin-bottom: 12px;
+}
