fix sprite image in detail

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -124,7 +124,7 @@
     <div class="col-lg-5">
         <div class="panel panel-info"> 
             <div class="panel-body"> 
-                <img class="" ng-src="../images/spr/{{pokemonDetail.id}}MS.png" /> 
+                <img class="detail-sprite" ng-src="../images/spr/{{pokemonDetail.id}}MS.png" /> <br />
                 HP
                 <div class="progress">
                   <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="255" style="width: {{pokemonDetail.base.HP/255*100}}%">
