fixed detail type label and added psychic label

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -110,13 +110,14 @@
                     <span class="label label-info col-sm-12 " ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Flying'">{{type}}</span>
                     <span class="label label-primary col-sm-12 " ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Water'">{{type}}</span>
                     <span class="label label-dark col-sm-12 " ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Dark'">{{type}}</span>
-                    <span class="label label-dark col-sm-12 label-steel" ng-if="type=='Steel'">{{type}}</span>
+                    <span class="label label-dark col-sm-12" ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Steel'">{{type}}</span>
                     <span class="label label-danger col-sm-12 " ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Dragon'">{{type}}</span>
                     <span class="label label-danger col-sm-12 " ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Ghost'">{{type}}</span>
                     <span class="label label-steel col-sm-12 " ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Rock'">{{type}}</span>
                     <span class="label label-info col-sm-12 " ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Ice'">{{type}}</span>
                     <span class="label label-pink col-sm-12 " ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Fairy'">{{type}}</span>
                     <span class="label label-pink col-sm-12 " ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Fighting'">{{type}}</span>
+                    <span class="label label-pink col-sm-12 " ng-class="pokemonDetail.etype.length>1? 'detail-label-fixed' : 'detail-label-fixed-single'" ng-if="type=='Psychic'">{{type}}</span>
                 </div> 
             </div> 
         </div>
