--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -261,3 +261,48 @@ a:-webkit-any-link {
     -moz-border-radius: 0 3px 3px 0;
     border-radius: 0 3px 3px 0;
 }
+
+.details-align {
+    text-align: center;
+}
+
+/*tooltip styles*/
+.tooltip-text {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip-text .tooltiptext {
+    visibility: hidden;
+    width: 230px;
+    background-color: #555;
+    color: #fff;
+    text-align: left;
+    border-radius: 6px;
+    padding: 5px 0;
+    padding-left: 20px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.tooltip-text .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.tooltip-text:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
